--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>Login Form</h2>
+    <h1>This is Login</h1>
 </body>
 </html>
